--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width-device-width, initial-scale=1, shrink-to-fit=no">
     <title>Добрый картон</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="src/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -22,14 +21,14 @@
                 </div>
                 <div class="col-9 col-md-8">
                     <div class="header-contacts">
-                        <div class="header-contacts__phones">
-                        <div class="header-contacts__phone">8 (347) 271-54-28</div>
-                        <div class="header-contacts__phone">8 (937) 363-30-00</div>
+                        <div class="header-contacts__phone">
+                        <div class="header-contacts__phones">8 (347) 271-54-28</div>
+                        <div class="header-contacts__phones">8 (937) 363-30-00</div>
                         </div>
-                    </div>
-                    <button class="header-contacts__button button">
+                        <button class="header-contacts__button button">
                         <img src="img/phone-icon.png"> <span class="hidden-mobile">Заказать звонок</span>
                     </button>
+                    </div>
                 </div>
             </div>
         </div>
