fixed form's closing

--- a/src/index.html
+++ b/src/index.html
@@ -86,16 +86,14 @@
     <script>window.jQuery || document.write('<script src="js/jquery-3.2.1.slim.min.js"><\/script')</script>
 
     <script>
-        
         $(document).ready(function(){
             $('.header-contacts__button').on("click",function(){
                 $('.overlay').show();
             });
             $('.popup-close').on("click",function(){
-                $('overlay').hide();
+                $('.overlay').hide();
             });
         });
-
     </script>
 
 </body>
