--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
                     <div class="header-contacts">
                         <div class="header-contacts__phone">
                         <div class="header-contacts__phones">8 (347) 271-54-28</div>
+                        <div style="width: 1px; background: #cfcfd0; margin-left: 15px; margin-right: 15px;"></div>
                         <div class="header-contacts__phones">8 (937) 363-30-00</div>
                         </div>
                         <button class="header-contacts__button button">
