--- a/src/index.html
+++ b/src/index.html
@@ -15,20 +15,19 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-3 col-md-4">
-                    <div class="header__logo">
-                        
+                    <div class="header-logo">
                     </div>
                 </div>
                 <div class="col-9 col-md-8">
                     <div class="header-contacts">
                         <div class="header-contacts__phone">
                         <div class="header-contacts__phones">8 (347) 271-54-28</div>
-                        <div style="width: 1px; background: #cfcfd0; margin-left: 15px; margin-right: 15px;"></div>
+                        <div class="hidden-mobile" style="width: 1px; background: #cfcfd0; margin-left: 15px; margin-right: 15px;"></div>
                         <div class="header-contacts__phones">8 (937) 363-30-00</div>
                         </div>
                         <button class="header-contacts__button button">
                         <img src="img/phone-icon.png"> <span class="hidden-mobile">Заказать звонок</span>
-                    </button>
+                        </button>
                     </div>
                 </div>
             </div>
