--- a/src/index.html
+++ b/src/index.html
@@ -72,9 +72,11 @@
                    <div class="popup-form-header">Получите индивидуальное предложение
 <span>на производство и поставку изделий</span>
                     <label for="phone" class="popup-form__label">Введите ваш номер телефона:</label>
-                    <input type="tel" class="popup-form__input" name="phone" required>
-                    <button class="button popup-form__btn">Оставить заявку!
-                  </button>
+                    <div class="popup-form__inputs">
+                    <input type="tel" class="popup-form__inputs__input" name="phone" required>
+                    <button class="button popup-form__inputs__btn">Оставить заявку!
+                    </button>
+                    </div>
                     <div class="popup-form__note">*Минимальный заказ 500шт</div>
                 </div>
                </form> 
