--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="features-blocks">
-                    <div class="features-block wow fadeInUp" data-wow-delay="0.1s>
+                    <div class="features-block wow fadeInUp" data-wow-delay="0.1s">
                         <div class="features-block__img">
                             <img src="img/ft-1.png">
                         </div>
@@ -122,7 +122,7 @@
                     </div>
                     <!-- /.features-block -->
 
-                    <div class="features-block wow fadeInUp" data-wow-delay="0.2s>
+                    <div class="features-block wow fadeInUp" data-wow-delay="0.2s">
                         <div class="features-block__img">
                             <img src="img/ft-2.png">
                         </div>
@@ -137,7 +137,7 @@
                     </div>
                     <!-- /.features-block -->
 
-                    <div class="features-block wow fadeInUp" data-wow-delay="0.3s>
+                    <div class="features-block wow fadeInUp" data-wow-delay="0.3s">
                         <div class="features-block__img">
                             <img src="img/ft-3.png">
                         </div>
@@ -152,7 +152,7 @@
                     </div>
                     <!-- /.features-block -->
 
-                    <div class="features-block wow fadeInUp" data-wow-delay="0.4s>
+                    <div class="features-block wow fadeInUp" data-wow-delay="0.4s">
                         <div class="features-block__img">
                             <img src="img/ft-4.png">
                         </div>
@@ -167,7 +167,7 @@
                     </div>
                     <!-- /.features-block -->
 
-                    <div class="features-block wow fadeInUp" data-wow-delay="0.5s>
+                    <div class="features-block wow fadeInUp" data-wow-delay="0.5s">
                         <div class="features-block__img">
                             <img src="img/ft-5.png">
                         </div>
@@ -254,6 +254,22 @@
         </div>
     </section>
 
+    <section class="offer">
+        <div class="container">
+            <h2 class="offer-title">Получите индивидуальное предложение
+            <span class="offer-title_small">на производство и поставку изделий</span>
+            </h2>
+                <div class="offer-form">
+                    <form action="#">
+                        <label class="offer-form__label" for="">Введите ваш номер телефона:</label>
+                        <input class="form__input offer-form__input" type="tel" placeholder="+7 (ХХХ) ХХХ-ХХ-ХХ">
+                        <button class="button offer-form__button" type="submit">Оставить заявку!</button>
+                    </form>
+                    <small class="form-small">*Минимальный заказ 500шт</small>
+                </div>
+        </div>
+    </section>
+
     <section class="production">
         <div class="container">
             <div class="row">
@@ -301,7 +317,6 @@
     </section>
     <!-- /.feedback -->
 
-
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="crossorigin="anonymous"></script>
 
     <script src="slick-1.8.1/slick/slick.min.js"></script>
@@ -329,7 +344,6 @@
         });
     </script>
     
-    
     <script>window.jQuery || document.write('<script src="js/jquery-3.2.1.slim.min.js"><\/script')</script>
     <script src="js/wow.min.js"></script>
     <script>
@@ -346,8 +360,6 @@
             });
         });
     </script>
-
-
 
 </body>
 </html>
