--- a/src/index.html
+++ b/src/index.html
@@ -207,7 +207,7 @@
             <h2 class="section-title wow fadeInUp">наша Продукция</h2>
 
             <div class="row">
-                <div class="col-6">
+                <div class="col-10 col-sm-6">
                     <div class="products-block">
                         <img class="product-block__img" src="img/prod-1.jpg" alt="">
                         <div class="products-block__title">Гофрокороб 4-х клапанный</div>
@@ -218,7 +218,7 @@
                     </div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-10 col-sm-6">
                     <div class="products-block">
                         <img class="product-block__img" src="img/prod-2.jpg" alt="">
                         <div class="products-block__title">Гофролоток</div>
@@ -230,7 +230,7 @@
             </div>
 
             <div class="row">
-                <div class="col-6">
+                <div class="col-10 col-sm-6">
                     <div class="products-block">
                         <img class="product-block__img" src="img/prod-3.jpg" alt="">
                         <div class="products-block__title">Гофрокороб самосборный (сложная высечка)</div>
@@ -240,7 +240,7 @@
                     </div>
                 </div>
 
-                <div class="col-6">
+                <div class="col-10 col-sm-6">
                     <div class="products-block">
                         <img class="product-block__img" src="img/prod-4.jpg" alt="">
                         <div class="products-block__title">Листовой гофрокартон</div>
@@ -273,7 +273,7 @@
     <section class="production">
         <div class="container">
             <div class="row">
-                <div class="col-7">
+                <div class="col-md-7 col-sm-12">
                     <div class="production-slider_top">
                         <img src="img/sl-1.jpg" alt="">
                         <img src="img/sl-2.jpg" alt="">
@@ -291,7 +291,7 @@
                         <img src="img/sl-3.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-5">
+                <div class="col-md-5 col-sm-12">
                     <div class="production-text">
                         <div class="production-text__title">Производство</div>
                         <div class="production-text__descr">Современное оборудование позволяет произ- водить до 5 миллионов квадратных метров гофрокартона ежемесячно. Гофрокороба и лотки производятся по ГОСТу или чертежам заказчика.
@@ -305,7 +305,7 @@
 
     <section class="feedback">
         <div class="container">
-            <h1 class="section-title">Отзывы о сотрудничестве</h1>
+            <h2 class="section-title">Отзывы о сотрудничестве</h1>
             <!-- /.section-title -->
             <div class="feedback-slider">
                 <div class="feedback-slider__item"><img src="img/doc-1.png" alt=""></div>
@@ -339,8 +339,30 @@
         $('.feedback-slider').slick({
             slidesToShow: 3,
             slidesToScroll: 1,
-            revArrow: '<div class="slider-arrow slider-arrow__feedback slider-arrow__left"></div>',
+            prevArrow: '<div class="slider-arrow slider-arrow__feedback slider-arrow__left"></div>',
             nextArrow: '<div class="slider-arrow slider-arrow__feedback slider-arrow__right"></div>',
+            responsive: [
+            {
+            breakpoint: 768,
+            settings: {
+                arrows: true,
+                slidesToShow: 3,
+                slidesToScroll: 1,
+                prevArrow: '<div class="slider-arrow slider-arrow__feedback slider-arrow__left"></div>',
+                nextArrow: '<div class="slider-arrow slider-arrow__feedback slider-arrow__right"></div>'
+                    }
+            },
+            {
+            breakpoint: 480,
+            settings: {
+                arrows: true,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                prevArrow: '<div class="slider-arrow slider-arrow__feedback slider-arrow__left"></div>',
+                nextArrow: '<div class="slider-arrow slider-arrow__feedback slider-arrow__right"></div>'
+                }
+            }
+            ]
         });
     </script>
     
